# 3d

./: README.md  average.py  depth.py  pyproject.toml  script.txt
